sandbox/src/org/springframework/selector/parser/SelectorParser.java
/* Generated By:JavaCC: Do not edit this line. SelectorParser.java */
package org.springframework.selector.parser;

import java.io.StringReader;

import java.util.Set;
import java.util.HashSet;
import java.util.Map;

public class SelectorParser implements SelectorParserConstants {
   private Map identifierMap = new java.util.HashMap();

   /**
    * Parse the specified selector.
    * @param selector Selector.
    * @param trace Flag to enable/disable tracing.
    * @return Returns the parse state. The parse state consists of the root
    * of the parse tree and the identifiers encountered during the parse.
    */
   public static SelectorParseState doParse(String selector, boolean trace) throws InvalidSelectorException
   {
      try
      {
          if (selector == null)
            throw new NullPointerException("NULL selector");
          else if (selector.trim().length() == 0)
              throw new IllegalArgumentException("Empty selector");

          return new SelectorParser().parse(selector, trace);
      }
      catch (ParseException ex)
      {
          throw new InvalidSelectorException(ex);
      }
   }

   private SelectorParser()
   {
      this(new StringReader(""));
   }

   private SelectorParseState parse(String selector) throws ParseException
   {
      return parse(selector, false);
   }

   private SelectorParseState parse(String selector, boolean trace) throws ParseException
   {
      StringReader sr = new StringReader(selector);
      ReInit(sr);

      if (trace)
      {
         this.enable_tracing();
      }
      else
      {
         this.disable_tracing();
      }

      return new SelectorParseState(this.expression(), identifierMap);
   }

   private String stripQuotes(String image)
   {
      return image.substring(1, image.length() - 1);
   }

   public static class SelectorParseState
   {
       public SelectorParseState(IExpression root, Map identifiers)
       {
           root_ = root;
           identifiers_ = identifiers;
       }

       public IExpression getRoot()
       {
           return root_;
       }

       public Map getIdentifiers()
       {
           return identifiers_;
       }

       private final  IExpression root_;
       private final  Map identifiers_;
   }

/** Start of the grammar */
  final public IExpression expression() throws ParseException {
   IExpression exp1 = null;
    exp1 = logicExpression();
    jj_consume_token(0);
        {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression logicExpression() throws ParseException {
   IExpression exp1 = null;
   IExpression exp2 = null;
    exp1 = notExpression();
    label_1:
    while (true) {
      if (jj_2_1(3)) {
        ;
      } else {
        break label_1;
      }
      if (jj_2_2(3)) {
        jj_consume_token(TK_AND);
        exp2 = notExpression();
         exp1 = new ConditionalOp(ConditionalOpImpl.AND, exp1, exp2);
      } else if (jj_2_3(3)) {
        jj_consume_token(TK_OR);
        exp2 = notExpression();
         exp1 = new ConditionalOp(ConditionalOpImpl.OR, exp1, exp2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression notExpression() throws ParseException {
   IExpression exp1 = null;
    if (jj_2_4(3)) {
      exp1 = relationalExpression();
     {if (true) return exp1;}
    } else if (jj_2_5(3)) {
      jj_consume_token(TK_NOT);
      exp1 = relationalExpression();
     exp1 = new ConditionalOp(ConditionalOpImpl.NOT, null, exp1);
    {if (true) return exp1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public IExpression relationalExpression() throws ParseException {
   IExpression exp1 = null;
   IExpression exp2 = null;
    exp1 = orEqualExpression();
    label_2:
    while (true) {
      if (jj_2_6(3)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_7(3)) {
        jj_consume_token(TK_LT);
        exp2 = orEqualExpression();
         exp1 = new ArithCompareOp(ArithCompareOpImpl.LT, exp1, exp2);
      } else if (jj_2_8(3)) {
        jj_consume_token(TK_GT);
        exp2 = orEqualExpression();
         exp1 = new ArithCompareOp(ArithCompareOpImpl.GT, exp1, exp2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression orEqualExpression() throws ParseException {
   IExpression exp1 = null;
   IExpression exp2 = null;
    exp1 = equalExpression();
    label_3:
    while (true) {
      if (jj_2_9(3)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_10(3)) {
        jj_consume_token(TK_LE);
        exp2 = equalExpression();
         exp1 = new ArithCompareOp(ArithCompareOpImpl.LE, exp1, exp2);
      } else if (jj_2_11(3)) {
        jj_consume_token(TK_GE);
        exp2 = equalExpression();
         exp1 = new ArithCompareOp(ArithCompareOpImpl.GE, exp1, exp2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression equalExpression() throws ParseException {
   IExpression exp1 = null;
   IExpression exp2 = null;
   IExpression exp3 = null;
   Set set = null;
    exp1 = additiveExpression();
    label_4:
    while (true) {
      if (jj_2_12(3)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_13(3)) {
        jj_consume_token(TK_NE);
        exp2 = additiveExpression();
         if (exp1 instanceof IExpressionNumeric || exp2 instanceof IExpressionNumeric)
                exp1 = new ConditionalOp(ConditionalOpImpl.NOT, null, new ArithCompareOp(ArithCompareOpImpl.EQ, exp1, exp2));
         else if (exp1 instanceof IExpressionBool || exp2 instanceof IExpressionBool)
                exp1 = new ConditionalOp(ConditionalOpImpl.NOT, null, new OpBoolEQ(exp1, exp2));
         else if (exp1 instanceof IExpressionString || exp2 instanceof IExpressionString)
                exp1 = new ConditionalOp(ConditionalOpImpl.NOT, null, new OpStringEQ(exp1, exp2));
         else
         {
                if (exp1 instanceof Identifier && exp2 instanceof Identifier)
                                {if (true) throw new ParseException("Syntax error: LHS (" + exp1.toString() + ") and RHS (" + exp2.toString() + ") cannot both be identifiers");}
                        else
                                {if (true) throw new ParseException("Syntax error: " + exp1.toString() + " <> " + exp2.toString());}
                 }
      } else if (jj_2_14(3)) {
        jj_consume_token(TK_EQ);
        exp2 = additiveExpression();
         if (exp1 instanceof IExpressionNumeric || exp2 instanceof IExpressionNumeric)
                exp1 = new ArithCompareOp(ArithCompareOpImpl.EQ, exp1, exp2);
         else if (exp1 instanceof IExpressionBool || exp2 instanceof IExpressionBool)
                exp1 = new OpBoolEQ(exp1, exp2);
         else if (exp1 instanceof IExpressionString || exp2 instanceof IExpressionString)
                exp1 = new OpStringEQ(exp1, exp2);
         else
         {
                if (exp1 instanceof Identifier && exp2 instanceof Identifier)
                                {if (true) throw new ParseException("Syntax error: LHS (" + exp1.toString() + ") and RHS (" + exp2.toString() + ") cannot both be identifiers");}
                        else
                                {if (true) throw new ParseException("Syntax error: " + exp1.toString() + " = " + exp2.toString());}
                 }
      } else if (jj_2_15(3)) {
        jj_consume_token(TK_IS);
        exp1 = nullExp(exp1);
      } else if (jj_2_16(3)) {
        jj_consume_token(TK_BETWEEN);
        exp2 = additiveExpression();
        jj_consume_token(TK_AND);
        exp3 = additiveExpression();
         exp1 = new OpBETWEEN(exp1, exp2, exp3);
      } else if (jj_2_17(3)) {
        jj_consume_token(TK_IS);
        exp1 = nullExp(exp1);
      } else if (jj_2_18(3)) {
        jj_consume_token(TK_NOT);
        jj_consume_token(TK_BETWEEN);
        exp2 = additiveExpression();
        jj_consume_token(TK_AND);
        exp3 = additiveExpression();
         exp1 = new OpBETWEEN(exp1, exp2, exp3);
         exp1 = new ConditionalOp(ConditionalOpImpl.NOT, null, exp1);
      } else if (jj_2_19(3)) {
        jj_consume_token(TK_LIKE);
        exp1 = likeExp(exp1);
      } else if (jj_2_20(3)) {
        jj_consume_token(TK_NOT);
        jj_consume_token(TK_LIKE);
        exp1 = likeExp(exp1);
         exp1 = new ConditionalOp(ConditionalOpImpl.NOT, null, exp1);
      } else if (jj_2_21(3)) {
        jj_consume_token(TK_IN);
        jj_consume_token(TK_LPAREN);
                            set = new HashSet();
        stringList(set);
        jj_consume_token(TK_RPAREN);
         exp1 = new OpIN(exp1, set);
      } else if (jj_2_22(3)) {
        jj_consume_token(TK_NOT);
        jj_consume_token(TK_IN);
        jj_consume_token(TK_LPAREN);
                                     set = new HashSet();
        stringList(set);
        jj_consume_token(TK_RPAREN);
         exp1 = new ConditionalOp(ConditionalOpImpl.NOT, null, new OpIN(exp1, set));
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression additiveExpression() throws ParseException {
   IExpression exp1 = null;
   IExpression exp2 = null;
    exp1 = multiplicativeExpression();
    label_5:
    while (true) {
      if (jj_2_23(3)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_24(3)) {
        jj_consume_token(TK_PLUS);
        exp2 = multiplicativeExpression();
         exp1 = new ArithOp(ArithOpImpl.PLUS, exp1, exp2);
      } else if (jj_2_25(3)) {
        jj_consume_token(TK_MINUS);
        exp2 = multiplicativeExpression();
         exp1 = new ArithOp(ArithOpImpl.MINUS, exp1, exp2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression multiplicativeExpression() throws ParseException {
   IExpression exp1 = null;
   IExpression exp2 = null;
    exp1 = unaryExpression();
    label_6:
    while (true) {
      if (jj_2_26(3)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_27(3)) {
        jj_consume_token(TK_MULT);
        exp2 = unaryExpression();
            exp1 = new ArithOp(ArithOpImpl.MULT, exp1, exp2);
      } else if (jj_2_28(3)) {
        jj_consume_token(TK_DIV);
        exp2 = unaryExpression();
            exp1 = new ArithOp(ArithOpImpl.DIV, exp1, exp2);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
     {if (true) return exp1;}
    throw new Error("Missing return statement in function");
  }

  final public IExpression unaryExpression() throws ParseException {
   IExpression exp1 = null;
    if (jj_2_29(3)) {
      jj_consume_token(TK_PLUS);
      exp1 = unaryExpression();
     {if (true) return exp1;}
    } else if (jj_2_30(3)) {
      jj_consume_token(TK_MINUS);
      exp1 = unaryExpression();
     {if (true) return new ArithOp(ArithOpImpl.NEG, null, exp1);}
    } else if (jj_2_31(3)) {
      exp1 = unaryExpressionNotPlusMinus();
     {if (true) return exp1;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public IExpression unaryExpressionNotPlusMinus() throws ParseException {
   Token t = null;
   IExpression exp = null;
    if (jj_2_32(3)) {
      t = jj_consume_token(TK_IDENTIFIER);
         Identifier id = (Identifier)identifierMap.get(t.image);
         if( id == null )
         {
            id = Identifier.valueOf(t.image);
            identifierMap.put(t.image, id);
         }
         {if (true) return id;}
    } else if (jj_2_33(3)) {
      t = jj_consume_token(TK_STRING);
      {if (true) return LiteralString.valueOf(stripQuotes(t.image));}
    } else if (jj_2_34(3)) {
      t = jj_consume_token(TK_DOUBLE);
      {if (true) return LiteralDouble.valueOf(t.image);}
    } else if (jj_2_35(3)) {
      t = jj_consume_token(TK_LONG);
      {if (true) return LiteralLong.valueOf(t.image);}
    } else if (jj_2_36(3)) {
      t = jj_consume_token(TK_TRUE);
      {if (true) return LiteralBool.valueOf(t.image);}
    } else if (jj_2_37(3)) {
      t = jj_consume_token(TK_FALSE);
      {if (true) return LiteralBool.valueOf(t.image);}
    } else if (jj_2_38(3)) {
      jj_consume_token(TK_LPAREN);
      exp = logicExpression();
      jj_consume_token(TK_RPAREN);
      {if (true) return exp;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public IExpression nullExp(IExpression exp1) throws ParseException {
   Token not = null;
    if (jj_2_39(3)) {
      not = jj_consume_token(TK_NOT);
    } else {
      ;
    }
    jj_consume_token(TK_NULL);
      if (not == null)
        {if (true) return new OpNULL(exp1);}
      else
        {if (true) return new ConditionalOp(ConditionalOpImpl.NOT, null, new OpNULL(exp1));}
    throw new Error("Missing return statement in function");
  }

  final public IExpression likeExp(IExpression exp1) throws ParseException {
   IExpression exp2 = null;
   IExpression exp3 = null;
   Token esc = null;
    exp2 = additiveExpression();
    if (jj_2_40(3)) {
      esc = jj_consume_token(TK_ESCAPE);
      exp3 = additiveExpression();
    } else {
      ;
    }
         if( esc == null )
            {if (true) return new OpLIKE(exp1, exp2, null);}
         else
            {if (true) return new OpLIKE(exp1, exp2, exp3);}
    throw new Error("Missing return statement in function");
  }

  final public void stringList(Set set) throws ParseException {
    stringToken(set);
    label_7:
    while (true) {
      if (jj_2_41(3)) {
        ;
      } else {
        break label_7;
      }
      jj_consume_token(TK_COMMA);
      stringToken(set);
    }
  }

  final public void stringToken(Set set) throws ParseException {
   Token t = null;
    if (jj_2_42(3)) {
      t = jj_consume_token(TK_STRING);
    } else {
      ;
    }
        if( t != null ) set.add(stripQuotes(t.image));
  }

  final private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_1();
    jj_save(0, xla);
    return retval;
  }

  final private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_2();
    jj_save(1, xla);
    return retval;
  }

  final private boolean jj_2_3(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_3();
    jj_save(2, xla);
    return retval;
  }

  final private boolean jj_2_4(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_4();
    jj_save(3, xla);
    return retval;
  }

  final private boolean jj_2_5(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_5();
    jj_save(4, xla);
    return retval;
  }

  final private boolean jj_2_6(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_6();
    jj_save(5, xla);
    return retval;
  }

  final private boolean jj_2_7(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_7();
    jj_save(6, xla);
    return retval;
  }

  final private boolean jj_2_8(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_8();
    jj_save(7, xla);
    return retval;
  }

  final private boolean jj_2_9(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_9();
    jj_save(8, xla);
    return retval;
  }

  final private boolean jj_2_10(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_10();
    jj_save(9, xla);
    return retval;
  }

  final private boolean jj_2_11(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_11();
    jj_save(10, xla);
    return retval;
  }

  final private boolean jj_2_12(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_12();
    jj_save(11, xla);
    return retval;
  }

  final private boolean jj_2_13(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_13();
    jj_save(12, xla);
    return retval;
  }

  final private boolean jj_2_14(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_14();
    jj_save(13, xla);
    return retval;
  }

  final private boolean jj_2_15(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_15();
    jj_save(14, xla);
    return retval;
  }

  final private boolean jj_2_16(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_16();
    jj_save(15, xla);
    return retval;
  }

  final private boolean jj_2_17(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_17();
    jj_save(16, xla);
    return retval;
  }

  final private boolean jj_2_18(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_18();
    jj_save(17, xla);
    return retval;
  }

  final private boolean jj_2_19(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_19();
    jj_save(18, xla);
    return retval;
  }

  final private boolean jj_2_20(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_20();
    jj_save(19, xla);
    return retval;
  }

  final private boolean jj_2_21(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_21();
    jj_save(20, xla);
    return retval;
  }

  final private boolean jj_2_22(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_22();
    jj_save(21, xla);
    return retval;
  }

  final private boolean jj_2_23(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_23();
    jj_save(22, xla);
    return retval;
  }

  final private boolean jj_2_24(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_24();
    jj_save(23, xla);
    return retval;
  }

  final private boolean jj_2_25(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_25();
    jj_save(24, xla);
    return retval;
  }

  final private boolean jj_2_26(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_26();
    jj_save(25, xla);
    return retval;
  }

  final private boolean jj_2_27(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_27();
    jj_save(26, xla);
    return retval;
  }

  final private boolean jj_2_28(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_28();
    jj_save(27, xla);
    return retval;
  }

  final private boolean jj_2_29(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    boolean retval = !jj_3_29();
    jj_save(28, xla);
    return retval;
  }
